# cppimpact

./: .gitignore  .gitmodules  CMakeLists.txt  FEA_debug.cu  test.cpp  test.cu
include/: analysis.h  basematerial.h  cppimpact_blas.h  cppimpact_defs.h  cppimpact_utils.h  dynamics.cuh  dynamics.h  dynamics_kernels.cuh  dynamics_kernels.h  elastoplastic.h  matrix.h  mesh.h  physics.h  simulation_config.h  tetrahedral.h  wall.h
input/: 0.25 cube calculix linear 39247 elem.inp  0.25 cube calculix linear 5758 elem.inp  0.25 cube calculix quad 5758 elem.inp  Dynamics Cube Coarse.inp  Dynamics Cube Linear.inp  Dynamics Cube Mid.inp  No Slave Nodes Test Quadratic.inp  fuselage 21657 elements.inp  fuselage 2647 elements.inp  fuselage 5086 elements.inp  quad tet.inp  simple tet 1.inp  simple tet 2.inp
